--- a/box-style.css
+++ b/box-style.css
@@ -99,7 +99,7 @@
 }
 
 #insta-box:hover {
-    background-color: rgb(228, 228, 228);
+    background-color: rgb(238, 238, 238);
 }
 
 #link-box {
@@ -112,7 +112,7 @@
     box-shadow: 0px 0px 36px -20px black;
 }
 #link-box:hover {
-    background-color: rgb(218, 218, 218);
+    background-color: rgb(238, 238, 238);
 }
 
 #dribbble-box {
@@ -125,7 +125,7 @@
     box-shadow: 0px 0px 36px -20px black;
 }
 #dribbble-box:hover {
-    background-color: rgb(218, 218, 218);
+    background-color: rgb(238, 238, 238);
 }
 
 @font-face {
@@ -141,3 +141,8 @@
     border-radius: 40px;
     box-shadow: 0px 0px 36px -20px black;
 }
+#link-box:hover {
+    background-color: rgb(238, 238, 238);
+}
+
+
