--- a/box-style.css
+++ b/box-style.css
@@ -141,7 +141,7 @@
     border-radius: 40px;
     box-shadow: 0px 0px 36px -20px black;
 }
-#link-box:hover {
+#email-box:hover {
     background-color: rgb(238, 238, 238);
 }
 
