--- a/box-style.css
+++ b/box-style.css
@@ -31,6 +31,7 @@
     border-radius: 40px;
     box-shadow: 0px 0px 36px -20px black;
 }
+
 #avatar {
     float: right;
     padding: 70px;
@@ -104,7 +105,6 @@ button {
     padding-right: 70px;
     line-height: 50px;
     font-family: Sans-serif;
-
 }
 
 #skills-box {
@@ -159,7 +159,7 @@ button {
 #jabama-logo {
     float: right;
     margin-right: 80px;
-    margin-top: -290px;
+    margin-top: 80px;
 }
 
 #for-more-info {
@@ -211,6 +211,7 @@ button {
     text-decoration: none;
     color: black;
     padding: 20px;
+    margin-right: 100px;
 }
 
 #contact-menue:hover {
@@ -245,7 +246,6 @@ button {
     font-weight: 30;
     text-decoration: none;
     color: black;
-    margin-right: 100px;
     padding: 20px;
 }
 
@@ -334,6 +334,46 @@ button {
     padding: 0 10px;
 }
 
+#whatsup {
+    font-family: handly;
+    text-align: left;
+    font-size: 156px;
+    margin-left: 22%;
+    margin-top: 150px;
+}
+
+#con-email {
+    font-family: 30px;
+    text-align: left;
+    font-weight: bold;
+    padding: 50px;
+    font-family: Sans-serif;
+}
+
+#con-tele {
+    font-family: 30px;
+    text-align: left;
+    font-weight: bold;
+    padding: 50px;
+    font-family: Sans-serif;
+}
+
+#con-link {
+    font-family: 30px;
+    text-align: left;
+    font-weight: bold;
+    padding: 50px;
+    font-family: Sans-serif;
+}
+#copyright{
+    margin: auto;
+    text-align: center;
+    padding: 50px;
+    font-weight: 400;
+    font-family: 28px;
+    color: black;
+}
+
 @media only screen and (max-width: 600px) {
     /*portfolio*/
     .box-align {
@@ -384,12 +424,12 @@ button {
     }
     #JuniorProductDesigner {
         margin-left: 47px;
-        margin-top: -55px;
+        margin-top: -24px;
         font-size: 28px;
     }
     #cv-botton {
-        margin-left: 50px;
-        margin-top: 20px;
+        margin-left: 47px;
+        margin-top: 1px;
     }
     #me-box {
         margin-top: -90px;
@@ -461,10 +501,38 @@ button {
         align-items: center;
         justify-content: center;
     }
-    
     .link-position {
         margin-top: 100px;
         margin-bottom: 50px;
         padding: 0 10px;
+    }
+    #email-box {
+        margin: auto;
+        width: 400px;
+        height: 141px;
+    }
+    #whatsup {
+        font-size: 100px;
+        margin-left: 47px;
+        margin-top: 100px;
+    }
+    #con-email {
+        font-size: 24px;
+        text-align: left;
+        font-weight: bold;
+        padding: 57px;
+    }
+    #con-tele {
+        font-size: 24px;
+        text-align: left;
+        font-weight: bold;
+        padding: 45px;
+        padding-left: 57px;
+    }
+    #con-link {
+        font-size: 24px;
+        text-align: left;
+        font-weight: bold;
+        padding: 57px;
     }
 }
