--- a/box-style.css
+++ b/box-style.css
@@ -373,7 +373,25 @@ button {
     padding-bottom: 50px;
     color: black;
 }
-
+#email-icon{
+    text-align: center;
+    padding: 35px;
+    float: right;
+}
+#tele-icon{
+    text-align: center;
+    padding: 25px;
+    float: right;
+    padding-right: 35px;
+    font-family: Sans-serif;
+}
+#link-icon{
+    text-align: center;
+    padding: 30px;
+    float: right;
+    padding-right: 35px;
+    font-family: Sans-serif;
+}
 @media only screen and (max-width: 600px) {
     /*portfolio*/
     .box-align {
@@ -511,8 +529,8 @@ button {
     }
     #email-box {
         margin: auto;
-        width: 400px;
-        height: 141px;
+        width: 300px;
+        height: 120px;
     }
     #whatsup {
         font-size: 100px;
@@ -523,19 +541,37 @@ button {
         font-size: 24px;
         text-align: left;
         font-weight: bold;
-        padding: 57px;
+        padding: 50px;
     }
     #con-tele {
         font-size: 24px;
         text-align: left;
         font-weight: bold;
-        padding: 45px;
-        padding-left: 57px;
+        padding: 38px;
+        padding-left: 50px;
     }
     #con-link {
         font-size: 24px;
         text-align: left;
         font-weight: bold;
-        padding: 57px;
+        padding: 50px;
+    }
+    #email-icon{
+        width: 70px;
+        height: 50px;
+        padding: 35px;
+        float: right;
+    }
+    #tele-icon{
+        width: 70px;
+        height: 80px;
+        padding: 20px;
+        padding-right: 35px;
+    }
+    #link-icon{
+        width: 70px;
+        height: 70px;
+        padding: 30px;
+        padding-right: 35px;
     }
 }
