--- a/box-style.css
+++ b/box-style.css
@@ -49,6 +49,7 @@
 }
 
 #foadmoghaddasi-inbox {
+    color: #76787E;
     margin-left: 80px;
     padding-top: 120px;
     font-size: 62px;
@@ -56,6 +57,7 @@
 }
 
 #JuniorProductDesigner {
+    color: #76787E;
     margin-left: 80px;
     margin-top: -75px;
     font-size: 31px;
