--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -875,6 +875,9 @@
         font-size: 26px;
         line-height: 30px;
     }
+    .dynamic-txts h1{
+        font-size: 36px;
+    }
     h1 {
         font-size: 36px;
         line-height: 36px;
